methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
    pickupBaggle();
                ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if(isOverBaggle){
  ^