methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    while(!isOverBaggle){
      forward();
      var x= getGroundColor
      if(x!=Color.green){
        backward();
        left();
        
      }
    }
  if(isOverBaggle){
    pickupBaggle();
  }
}